--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 		<body>
 			<header>
 				<nav>
-                    <a href="index.php">Home</a>
-					<a href="product.php">Products</a>
-					<a href="contact.php"  class="active">Contact Us</a>
+                    <a href="index.html">Home</a>
+					<a href="product.html">Products</a>
+					<a href="contact.html"  class="active">Contact Us</a>
 
 					<!-- <a class="logo"> <img src="images/logo.gif"></a> -->
 
