--- a/product.html
+++ b/product.html
@@ -21,12 +21,13 @@
                 // Insert new cells (<td> elements) at the 1st and 2nd position of the "new" <tr> element:
                 var cell1 = row.insertCell(0);
                 var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(2);
 
                 // Add some text to the new cells:
                 cell1.innerHTML = name;
                 cell2.innerHTML = price;
+                cell3.innerHTML = cell3.innerHTML + "<button type='button' class='btn-primary mx-2'>Add</button><button type='button' class='btn-primary mx-2'>Delete</button>";
                 counter++;
-
 
             }
 
@@ -66,7 +67,7 @@
         <div id="final" style="text-align:center">
 
         </div>
-        <table class="table container" id="cartTable">
+        <table class="table  table-dark container" id="cartTable">
             <thead>
                 <tr>
                     <th>
@@ -74,6 +75,9 @@
                     </th>
                     <th>
                         Product Price
+                    </th>
+                    <th>
+                        Actions
                     </th>
                 </tr>
             </thead>
